--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
      </head><link rel="stylesheet" href="style.css">
 
     <body><address elephants>
-    <h1></h1>
-        </address elephants>
+    <h1>Address Elephants</h1>
 
 <nav><ul>
    <li><a href="index.html">Home</a></li>
@@ -20,20 +19,15 @@
         <li></li>
         <li></li>
     </ul>
-</nav><ul>
-   <li><a href="index.html">Home</a></li>
-   <li><a href="about.html">About</a></li>
-   <li><a href="resources.html">Resources</a></li>
-</ul>
 
 <main>
-    <h2></h2>home
+    <h2>home</h2>
     <img src="elephant1.jpg" width="1280px" alt="1 elephant beside on baby elephant"
     <p><cite>elephant</cite> by <a href="<a href="https://www.pexels.com/photo/elephant/" 
     target="_blank">Pexels</a>.</p>"
     elephant by Pexels  
-    <p></p> We lose at least 20,000 elephants per year. There are now only 415,000 elephants left
-    in the world.                               
+    <p>We lose at least 20,000 elephants per year. There are now only 415,000 elephants left
+    in the world.</p>                               
 </main>
 
 <footer><p>&copy; 2024 by Mindy for BATECH 189</p> 
