--- a/resources.html
+++ b/resources.html
@@ -16,20 +16,15 @@
         <li></li>
         <li></li>
     </ul>
-</nav><ul>
-   <li><a href="index.html">Home</a></li>
-   <li><a href="about.html">About</a></li>
-   <li><a href="resources.html">Resources</a></li>
-</ul>
 
 <main>
-    <h2></h2>resources
+    <h2>Resources</h2>
      <img src="elephant3.jpg" width="4816px" alt="Elephants on Brown Mountain"
     <p><cite>elephant</cite> by <a href="<a href="https://www.pexels.com/photo/elephant/" 
     target="_blank">Pexels</a>.</p>"
     elephant by Pexels                               
-    <p></p> To save these animals, we must protect their habitat. Some ways are protecting
-    oranizations that help save elephants and alsobeing aware of products you consume.                          
+    <p>To save these animals, we must protect their habitat. Some ways are protecting
+    oranizations that help save elephants and alsobeing aware of products you consume.</p>                           
 </main>
 
 <footer><p>&copy; 2024 by Mindy for BATECH 189</p> 
